kubernetes/12-factor-app/dotnet-subtractor.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subtractapp
  labels:
    app: subtract
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subtract
  template:
    metadata:
      labels:
        app: subtract
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "subtractapp"
        dapr.io/app-port: "80"
        dapr.io/config: "appconfig"
    spec:
      containers:
      - name: subtract
        image: quay.io/infralovers/distributed-calculator/csharp:1.0.3
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 100M
          limits:
            cpu: 250m
            memory: 125M
