kubernetes/12-factor-app/python-multiplier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multiplyapp
  labels:
    app: multiply
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multiply
  template:
    metadata:
      labels:
        app: multiply
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "multiplyapp"
        dapr.io/app-port: "5000"
        dapr.io/config: "appconfig"
    spec:
      containers:
      - name: multiply
        image: quay.io/infralovers/distributed-calculator/python:1.0.3
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 100M
          limits:
            cpu: 250m
            memory: 125M
